--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">PI3-ES-2024-T24</string>
+    <string name="app_name">Lock N\'Live</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
 </resources>
