--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Lock N\'Live</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
+    <string name="confirmar_senha">confirmar senha</string>
+    <string name="celular">celular</string>
 </resources>
