--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="open_nav" />
     <string name="close_nav" />
+    <string name="locker">locker</string>
+    <string name="home">Home</string>
+    <string name="about_us">About Us</string>
+    <string name="settings">settings</string>
+    <string name="logout">Logout</string>
 </resources>
