update nav and sign up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="criar_conta">Criar Conta</string>
     <string name="j_tem_conta_clique_aqui">Já tem conta? Clique aqui</string>
     <string name="sign_up">Sign up</string>
+    <string name="entrar">Entrar</string>
+    <string name="registrar_conta">Registrar conta</string>
+    <string name="login">Login</string>
 </resources>
