--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,8 @@
     <string name="login_text">Faça o login ou crie uma conta para começar a alugar armarios! ;)</string>
     <string name="verificar_armarios_por_perto">Verificar armarios por perto:</string>
     <string name="n_o_tem_cadastro_clique_aqui">Não tem cadastro? Clique aqui.</string>
+    <string name="realizar_loca_o">Realizar locação</string>
+    <string name="selectione_uma_op_o_de_tempo">Selectione uma opção de tempo:</string>
+    <string name="confirm">Confirm</string>
 
 </resources>
