add dialog location

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,6 @@
     <string name="n_o_tem_cadastro_clique_aqui">Não tem cadastro? Clique aqui.</string>
     <string name="realizar_loca_o">Realizar locação</string>
     <string name="selectione_uma_op_o_de_tempo">Selectione uma opção de tempo:</string>
-    <string name="confirm">Confirm</string>
+    <string name="confirm">Confirmar</string>
 
 </resources>
