--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="entrar">Entrar</string>
     <string name="registrar_conta"></string>
     <string name="login">Login</string>
-    <string name="sair_da_conta">Sair da Conta?</string>
+    <string name="sair_da_conta">Sair da conta?</string>
     <string name="sair">sair</string>
     <string name="cancelar">cancelar</string>
     <string name="comece_a_alugar_armarios_agora">Comece a alugar armarios agora! :)</string>
