update ricing cancel and location

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="verificar_armarios_por_perto">Verificar armarios por perto:</string>
     <string name="n_o_tem_cadastro_clique_aqui">Não tem cadastro? Clique aqui.</string>
     <string name="realizar_loca_o">Realizar locação</string>
-    <string name="selectione_uma_op_o_de_tempo">Selectione uma opção de tempo:</string>
+    <string name="selectione_uma_op_o_de_tempo">Selecione uma opção de tempo:</string>
     <string name="confirm">Confirmar</string>
     <string name="j_tem_cadastro_clique_aqui">Já tem cadastro? Clique aqui.</string>
 
