update fixed commit
Co-Authored-By: Melissa Seleghin <125600259+melseleghin@users.noreply.github.com>
Co-Authored-By: Kauan Barbosa <77552839+kauanbarbosa@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,5 +62,9 @@
     <string name="manager_name">Gerente @manager!</string>
     <string name="release_locker">Liberar locação</string>
     <string name="abrir_arm_rio">Abrir armário</string>
+    <string name="fotografia_realizada_com_sucesso">Fotografia realizada com sucesso!</string>
+    <string name="nameuser">nameUser</string>
+    <string name="emailuser">emailUser</string>
+    <string name="finalizar">Finalizar</string>
 
 </resources>
